--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
